tests/samples/positive/error_handling/try_result_option.ax
module try_result_option;

enum OptionI32: u8 {
    some(i32) = 1,
    none = 2,
}

enum ResultI32I32: u8 {
    ok(i32) = 1,
    err(i32) = 2,
}

fn parse_digit(value: i32) -> ResultI32I32 {
    if value < 0 {
        return ResultI32I32.err(7);
    }
    return ResultI32I32.ok(value + 1);
}

fn add_one_result(value: i32) -> ResultI32I32 {
    let parsed: i32 = parse_digit(value)?;
    return ResultI32I32.ok(parsed + 1);
}

fn maybe_even(value: i32) -> OptionI32 {
    if (value % 2) == 0 {
        return OptionI32.some(value);
    }
    return OptionI32.none;
}

fn unwrap_even(value: i32) -> OptionI32 {
    let even: i32 = maybe_even(value)?;
    return OptionI32.some(even + 2);
}

fn main() -> i32 {
    let ok_value: i32 = match add_one_result(4) {
        .ok(value) => value,
        .err(code) => code,
    };
    let err_value: i32 = match add_one_result(-1) {
        .ok(value) => value,
        .err(code) => code,
    };
    let some_value: i32 = match unwrap_even(4) {
        .some(value) => value,
        .none => 0,
    };
    let none_value: i32 = match unwrap_even(3) {
        .some(value) => value,
        .none => 0,
    };
    if ok_value == 6 && err_value == 7 && some_value == 6 && none_value == 0 {
        return 0;
    }
    return 1;
}
