tests/samples/negative/error_handling/try_result_return_mismatch.ax
module try_result_return_mismatch;

enum ResultI32I32: u8 {
    ok(i32) = 1,
    err(i32) = 2,
}

fn parse() -> ResultI32I32 {
    return ResultI32I32.ok(1);
}

fn main() -> i32 {
    let value: i32 = parse()?;
    return value;
}
